tweaked spatial analysis

--- a/SDWA-data-prep/SDWISData.ipynb
+++ b/SDWA-data-prep/SDWISData.ipynb
@@ -1398,7 +1398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Obtain PWS data from Envirofacts RESTful API"
+    "## Obtain water system characteristic data from Envirofacts RESTful API"
    ]
   },
   {
@@ -1482,7 +1482,7 @@
     }
    ],
    "source": [
-    "# Explore data\n",
+    "# Filter and explore the data\n",
     "pws_df = clean_headers(pws_df, 'WATER_SYSTEM.')\n",
     "filters = (pws_df.STATE_CODE == 'NJ') & \\\n",
     "            (pws_df.PWS_ACTIVITY_CODE == 'A') & \\\n",
@@ -1493,13 +1493,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Only utilize necessary columns\n",
     "pws_clean = pws_df.filter(['PWSID',\n",
-    "                           'GW_SW_CODE',\n",
+    "                           'PRIMARY_SOURCE_CODE',\n",
     "                           'OWNER_TYPE_CODE', \n",
     "                           'SERVICE_CONNECTIONS_COUNT',\n",
     "                           'COUNTIES_SERVED'], axis=1)"
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1518,7 @@
       "Index: 501 entries, 0 to 9138\n",
       "Data columns (total 5 columns):\n",
       "PWSID                        501 non-null object\n",
-      "GW_SW_CODE                   501 non-null object\n",
+      "PRIMARY_SOURCE_CODE          501 non-null object\n",
       "OWNER_TYPE_CODE              501 non-null object\n",
       "SERVICE_CONNECTIONS_COUNT    501 non-null int64\n",
       "COUNTIES_SERVED              501 non-null object\n",
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>PWSID</th>\n",
-       "      <th>GW_SW_CODE</th>\n",
+       "      <th>PRIMARY_SOURCE_CODE</th>\n",
        "      <th>OWNER_TYPE_CODE</th>\n",
        "      <th>SERVICE_CONNECTIONS_COUNT</th>\n",
        "      <th>COUNTIES_SERVED</th>\n",
@@ -1622,12 +1622,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       PWSID GW_SW_CODE OWNER_TYPE_CODE  SERVICE_CONNECTIONS_COUNT  \\\n",
-       "0  NJ1432001         GW               L                         10   \n",
-       "1  NJ1435002         GW               L                       4350   \n",
-       "2  NJ1503001         GW               L                       2253   \n",
-       "3  NJ1522001         GW               L                        933   \n",
-       "4  NJ1005001         GW               L                       4600   \n",
+       "       PWSID PRIMARY_SOURCE_CODE OWNER_TYPE_CODE  SERVICE_CONNECTIONS_COUNT  \\\n",
+       "0  NJ1432001                  GW               L                         10   \n",
+       "1  NJ1435002                  GW               L                       4350   \n",
+       "2  NJ1503001                  GW               L                       2253   \n",
+       "3  NJ1522001                  GW               L                        933   \n",
+       "4  NJ1005001                  GW               L                       4600   \n",
        "\n",
        "  COUNTIES_SERVED  all_violations  health_violations  \n",
        "0          Morris            30.0                0.0  \n",
@@ -1637,7 +1637,7 @@
        "4       Hunterdon             4.0                0.0  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,23 +1661,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sdwa_vios_commplete' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-86-f15696a800d4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msdwa_vios_commplete\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'..\\Data\\Created\\SDWIS\\sdwa_vios_complete.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'sdwa_vios_commplete' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'GW', 'SW', 'SWP', 'GU', 'GWP'}\n",
+      "{'M', 'S', 'F', 'P', 'L'}\n"
      ]
     }
    ],
    "source": [
-    "sdwa_vios_commplete.to_csv('..\\Data\\Created\\SDWIS\\sdwa_vios_complete.csv', index=False)"
+    "# Write out full names for codes\n",
+    "# Identyify a full list of codes\n",
+    "print(set(sdwa_vios_merged['PRIMARY_SOURCE_CODE']))\n",
+    "print(set(sdwa_vios_merged['OWNER_TYPE_CODE']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psc = {'GW': 'Ground water', \n",
+    "       'SW': 'Surface water', \n",
+    "       'SWP': 'Surface water purchased', \n",
+    "       'GWP': 'Groundwater purchased',\n",
+    "       'GU': 'Ground water under influence of surface water source'}\n",
+    "otc = {'M': 'Mixed', \n",
+    "       'S': 'State Government', \n",
+    "       'F': 'Federal Government', \n",
+    "       'P': 'Private', \n",
+    "       'L': 'Local Government'}\n",
+    "\n",
+    "def psc_to_description(code):\n",
+    "    return psc[code]\n",
+    "\n",
+    "def otc_to_description(code):\n",
+    "    return otc[code]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdwa_vios_merged['primary_source'] = sdwa_vios_merged['PRIMARY_SOURCE_CODE'].apply(psc_to_description)\n",
+    "sdwa_vios_merged['owner_type'] = sdwa_vios_merged['OWNER_TYPE_CODE'].apply(otc_to_description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PWSID</th>\n",
+       "      <th>PRIMARY_SOURCE_CODE</th>\n",
+       "      <th>OWNER_TYPE_CODE</th>\n",
+       "      <th>SERVICE_CONNECTIONS_COUNT</th>\n",
+       "      <th>COUNTIES_SERVED</th>\n",
+       "      <th>all_violations</th>\n",
+       "      <th>health_violations</th>\n",
+       "      <th>primary_source</th>\n",
+       "      <th>owner_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NJ1432001</td>\n",
+       "      <td>GW</td>\n",
+       "      <td>L</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Morris</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Ground water</td>\n",
+       "      <td>Local Government</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NJ1435002</td>\n",
+       "      <td>GW</td>\n",
+       "      <td>L</td>\n",
+       "      <td>4350</td>\n",
+       "      <td>Morris</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Ground water</td>\n",
+       "      <td>Local Government</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NJ1503001</td>\n",
+       "      <td>GW</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2253</td>\n",
+       "      <td>Ocean</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Ground water</td>\n",
+       "      <td>Local Government</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NJ1522001</td>\n",
+       "      <td>GW</td>\n",
+       "      <td>L</td>\n",
+       "      <td>933</td>\n",
+       "      <td>Ocean</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Ground water</td>\n",
+       "      <td>Local Government</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NJ1005001</td>\n",
+       "      <td>GW</td>\n",
+       "      <td>L</td>\n",
+       "      <td>4600</td>\n",
+       "      <td>Hunterdon</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Ground water</td>\n",
+       "      <td>Local Government</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       PWSID PRIMARY_SOURCE_CODE OWNER_TYPE_CODE  SERVICE_CONNECTIONS_COUNT  \\\n",
+       "0  NJ1432001                  GW               L                         10   \n",
+       "1  NJ1435002                  GW               L                       4350   \n",
+       "2  NJ1503001                  GW               L                       2253   \n",
+       "3  NJ1522001                  GW               L                        933   \n",
+       "4  NJ1005001                  GW               L                       4600   \n",
+       "\n",
+       "  COUNTIES_SERVED  all_violations  health_violations primary_source  \\\n",
+       "0          Morris            30.0                0.0   Ground water   \n",
+       "1          Morris             5.0                0.0   Ground water   \n",
+       "2           Ocean             1.0                1.0   Ground water   \n",
+       "3           Ocean             1.0                0.0   Ground water   \n",
+       "4       Hunterdon             4.0                0.0   Ground water   \n",
+       "\n",
+       "         owner_type  \n",
+       "0  Local Government  \n",
+       "1  Local Government  \n",
+       "2  Local Government  \n",
+       "3  Local Government  \n",
+       "4  Local Government  "
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdwa_vios_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace all null values in the violation fields with with 0 since if there \n",
+    "# isn't violation data  for a water system that means the water system did not \n",
+    "# recieve a violation.\n",
+    "sdwa_vios_merged.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdwa_vios_merged.to_csv('..\\Data\\Created\\SDWIS\\sdwa_vios_complete.csv', index=False)"
    ]
   }
  ],
