converted PWS GeoJSON to correct coordinate system

--- a/web-display/data/data-prep.ipynb
+++ b/web-display/data/data-prep.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Downloading New Jersey boundary as GeoJSON"
+    "1. Downloading New Jersey boundary as GeoJSON"
    ]
   },
   {
@@ -150,18 +150,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "2. Convert PWS data to right coordinate system"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "aw = gpd.read_file('../../Data/Created/SpatialAnalysis/county_vios.geojson')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'init': 'epsg:3424'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aw.crs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aw = aw.to_crs({'init': 'epsg:4326'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zstat\\Anaconda2\\envs\\py36\\lib\\site-packages\\geopandas\\io\\file.py:108: FionaDeprecationWarning: Use fiona.Env() instead.\n",
+      "  with fiona.drivers():\n"
+     ]
+    }
+   ],
+   "source": [
+    "aw.to_file('pws_aw.geojson', driver='GeoJSON')"
+   ]
   }
  ],
  "metadata": {
