made violation data choropleth

--- a/web-display/data/data-prep.ipynb
+++ b/web-display/data/data-prep.ipynb
@@ -158,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aw = gpd.read_file('../../Data/Created/SpatialAnalysis/county_vios.geojson')"
+    "aw = gpd.read_file('../../Data/Created/SpatialAnalysis/AW_vios.geojson')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "{'init': 'epsg:3424'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +211,31 @@
    "source": [
     "aw.to_file('pws_aw.geojson', driver='GeoJSON')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zstat\\Anaconda2\\envs\\py36\\lib\\site-packages\\geopandas\\io\\file.py:108: FionaDeprecationWarning: Use fiona.Env() instead.\n",
+      "  with fiona.drivers():\n"
+     ]
+    }
+   ],
+   "source": [
+    "aw.to_file('./working/pws_aw.shp', driver='ESRI Shapefile')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
