--- a/spatial-analysis/ArealWeighting.ipynb
+++ b/spatial-analysis/ArealWeighting.ipynb
@@ -1836,7 +1836,7 @@
     }
    ],
    "source": [
-    "list(PWS_agg.geometry)"
+    "list(PWS_agg.geometry.head())"
    ]
   },
   {
@@ -2971,7 +2971,7 @@
     "    return caster([geom])\n",
     "\n",
     "PWS_agg['geometry'] = PWS_agg.geometry.apply(maybe_cast_to_multigeometry)\n",
-    "PWS_agg"
+    "PWS_agg.head()"
    ]
   },
   {
@@ -3777,21 +3777,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
