removed unnecessary folder

--- a/SDWA_data_prep/sdwis_data.ipynb
+++ b/SDWA_data_prep/sdwis_data.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identify a few rows of data\n",
+    "# tmuxta\n",
     "#url = 'https://iaspub.epa.gov/enviro/efservice/SDW_VIOL_ENFORCEMENT/STATE/NJ/COMPPERBEGINDATE/>/31-DEC-11/COMPPERENDDATE/</01-JAN-17/ROWS/0:30/JSON'\n",
     "# Identify the whole table\n",
     "url = 'https://iaspub.epa.gov/enviro/efservice/SDW_VIOL_ENFORCEMENT/STATE/NJ/COMPPERBEGINDATE/>/31-DEC-11/COMPPERENDDATE/</01-JAN-17/CSV'\n",
