fixed error in SDWIS data accessing

--- a/spatial_analysis/by_county.ipynb
+++ b/spatial_analysis/by_county.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,22 +25,24 @@
    "metadata": {},
    "source": [
     "## Explore and clean file containing water system characteristics and violation data\n",
-    "See SDWISData.ipynb for more information on this dataset."
+    "See sdwis_data.ipynb for more information on this dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {},
+   "execution_count": 98,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "sdwa_vios = pd.read_csv('..\\Data\\Created\\SDWIS\\sdwa_vios_complete.csv')\n",
+    "sdwa_vios = pd.read_csv('../data/Created/SDWIS/sdwa_vios_complete.csv')\n",
     "sdwa_vios = sdwa_vios.rename(columns={'PWSID': \"PWID\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +195,7 @@
        "4  Local Government  Hunterdon  "
       ]
      },
-     "execution_count": 219,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -296,20 +298,20 @@
        "4     333316     192408    15745     34      35"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Open Census data\n",
-    "cen_data_county = pd.read_csv('../Data/Created/census_county.csv')\n",
+    "cen_data_county = pd.read_csv('../data/Created/census_county.csv')\n",
     "cen_data_county.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +426,7 @@
        "4     333316     192408    15745     34      35   140908  42.274598   4.723746"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,12 +437,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add county names to the Census data for joining\n",
-    "county_fips_codes = {'1': 'Head',\n",
+    "county_fips_codes = {'1': 'Atlantic',\n",
     "                    '3': 'Bergen',\n",
     "                    '5': 'Burlington',\n",
     "                    '7': 'Camden',\n",
@@ -450,7 +452,7 @@
     "                    '15': 'Gloucester',\n",
     "                    '17': 'Hudson',\n",
     "                    '19': 'Hunterdon',\n",
-    "                    '21': 'Merger',\n",
+    "                    '21': 'Mercer',\n",
     "                    '23': 'Middlesex',\n",
     "                    '25': 'Monmouth',\n",
     "                    '27': 'Morris',\n",
@@ -465,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,13 +480,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Join the two datasets\n",
     "pws_cen_county = pd.merge(sdwa_vios, cen_data_county, \n",
-    "                          on='county', how='left', validate='many_to_many')"
+    "                          on='county', how='left', validate='many_to_one')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PWID</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>PRIMARY_SOURCE_CODE</th>\n",
+       "      <th>OWNER_TYPE_CODE</th>\n",
+       "      <th>SERVICE_CONNECTIONS_COUNT</th>\n",
+       "      <th>COUNTIES_SERVED</th>\n",
+       "      <th>all_violations</th>\n",
+       "      <th>health_violations</th>\n",
+       "      <th>primary_source</th>\n",
+       "      <th>owner_type</th>\n",
+       "      <th>...</th>\n",
+       "      <th>total_pop</th>\n",
+       "      <th>white_pop</th>\n",
+       "      <th>pov_pop</th>\n",
+       "      <th>state</th>\n",
+       "      <th>POC_pop</th>\n",
+       "      <th>perc_POC</th>\n",
+       "      <th>perc_pov</th>\n",
+       "      <th>perc_urban</th>\n",
+       "      <th>perc_rural</th>\n",
+       "      <th>urban_rural</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty GeoDataFrame\n",
+       "Columns: [PWID, geometry, PRIMARY_SOURCE_CODE, OWNER_TYPE_CODE, SERVICE_CONNECTIONS_COUNT, COUNTIES_SERVED, all_violations, health_violations, primary_source, owner_type, county, total_pop, white_pop, pov_pop, state, POC_pop, perc_POC, perc_pov, perc_urban, perc_rural, urban_rural]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pws_county_complete[pws_county_complete.total_pop.isna()]"
    ]
   },
   {
@@ -496,17 +570,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import NJ public water system geospatial data\n",
-    "pws_geodata = gpd.read_file('../Data/NJDEP/New_Jersey__Public_Community_Water_Purveyor_Service_Areas.shp')"
+    "pws_geodata = gpd.read_file('../data/NJDEP/New_Jersey__Public_Community_Water_Purveyor_Service_Areas.shp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,16 +598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "urban_rural = pd.read_csv('../Data/Census/DEC_10_SF1_H2_with_ann.csv')"
+    "urban_rural = pd.read_csv('../data/Census/DEC_10_SF1_H2_with_ann.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +740,7 @@
        "5   8930                         0  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +851,7 @@
        "5    Cape May    0.909164    0.090836"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,14 +863,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
-   "metadata": {},
+   "execution_count": 117,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\zstat\\Anaconda2\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "/home/zstatmanweil/venvs/ej/lib/python3.6/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -812,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +899,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'geopandas.geodataframe.GeoDataFrame'>\n",
+      "Int64Index: 456 entries, 0 to 455\n",
+      "Data columns (total 21 columns):\n",
+      "PWID                         456 non-null object\n",
+      "geometry                     456 non-null object\n",
+      "PRIMARY_SOURCE_CODE          456 non-null object\n",
+      "OWNER_TYPE_CODE              456 non-null object\n",
+      "SERVICE_CONNECTIONS_COUNT    456 non-null int64\n",
+      "COUNTIES_SERVED              456 non-null object\n",
+      "all_violations               456 non-null int64\n",
+      "health_violations            456 non-null int64\n",
+      "primary_source               456 non-null object\n",
+      "owner_type                   456 non-null object\n",
+      "county                       456 non-null object\n",
+      "total_pop                    456 non-null float64\n",
+      "white_pop                    456 non-null float64\n",
+      "pov_pop                      456 non-null float64\n",
+      "state                        456 non-null float64\n",
+      "POC_pop                      456 non-null float64\n",
+      "perc_POC                     456 non-null float64\n",
+      "perc_pov                     456 non-null float64\n",
+      "perc_urban                   456 non-null float64\n",
+      "perc_rural                   456 non-null float64\n",
+      "urban_rural                  456 non-null object\n",
+      "dtypes: float64(9), int64(3), object(9)\n",
+      "memory usage: 78.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pws_county_complete.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,40 +962,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\zstat\\Anaconda2\\envs\\py36\\lib\\site-packages\\geopandas\\io\\file.py:108: FionaDeprecationWarning: Use fiona.Env() instead.\n",
-      "  with fiona.drivers():\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pws_county_complete.to_file('..\\Data\\Created\\SpatialAnalysis\\county_vios.geojson', driver = 'GeoJSON')"
+    "pws_county_complete.to_file('../data/Created/SpatialAnalysis/county_vios.geojson', driver = 'GeoJSON')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
